--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Publish Custom Node
         uses: Comfy-Org/publish-node-action@main
         with:
-          personal_access_token: ${{ 0c832689-b455-4ecf-b871-be00f63587b5 }} ## Add your own personal access token to your Github Repository secrets and reference it here.
+          personal_access_token: 0c832689-b455-4ecf-b871-be00f63587b5
